# crate_downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: tar_crates_since_date.sh
src/: lib.rs  main.rs
