[package]
name = "crate_downloader"
description = "Download Rust crates for offline development"
version = "0.1.0"
authors = ["jarri2di <joe.arrington@gmail.com>"]
repository = "https://github.com/jarri2di/crate_downloader"
readme = "README.md"
license = "BSD 3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
futures = "0.3"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
structopt = "0.3"
log = "0.4"
env_logger = "0.7"